ManagedPackage/objects/baddogtail__Camp_Visit__c.object
<CustomObject>
    <description>A stay or a future stay at a camp site</description>
    <fields>
        <fullName>baddogtail__CampSite__c</fullName>
        <label>CampSite</label>
        <referenceTo>baddogtail__CampSite__c</referenceTo>
        <relationshipLabel>CampVisits</relationshipLabel>
        <relationshipName>CampVisits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>baddogtail__Checkin_Date__c</fullName>
        <label>Checkin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>baddogtail__Length_of_Stay__c</fullName>
        <label>Length of Stay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>baddogtail__Site_Features__c</fullName>
        <label>Site Features</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>baddogtail__Site_Number__c</fullName>
        <label>Site Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Camp Visit</label>
    <listViews>
        <fullName>baddogtail__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Camp Visit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CampVisits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>